# open-interpreter-docker

./: docker-compose.yml  readme.md
python/: Dockerfile
python/code/: pyproject.toml  tokyo.tsv
