[tool.poetry]
authors = ["Hirokazu Mori"]
description = ""
name = "app"
version = "0.1.0"

[tool.poetry.dependencies]
numpy = "^1.25.2"
open-interpreter = "^0.1.3"
pandas = "2.1.0"
python = ">=3.11,<3.12"
pytz = "^2023.3"
requests = "^2.28.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 120

[tool.pyright]
exclude = [
  "**/tests",
  "**/migrations",
  "**/__pycache__",
]
pythonPlatform = "All"
pythonVersion = "3.11"
reportAssertAlwaysTrue = true
reportConstantRedefinition = true
reportDuplicateImport = true
reportImportCycles = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportMissingImports = true
reportMissingParameterType = true
reportMissingSuperCall = true
reportMissingTypeStubs = false
reportOverlappingOverload = true
reportPrivateUsage = true
reportUnnecessaryCast = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true
reportUnusedClass = true
reportUnusedExpression = true
reportUnusedFunction = true
reportUnusedVariable = true
stubPath = ""
typeCheckingMode = 'basic'
useLibraryCodeForTypes = true
